--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     </dependencies>
 
     <build>
+        <finalName>application</finalName>
         <defaultGoal>spring-boot:run</defaultGoal>
         <plugins>
             <plugin>
